--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,25 +4,86 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.label :名前 %><br />
+    <%= f.text_field :name, autofocus: true  %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :Email %><br />
+    <%= f.email_field :email%>
+  </div>
+
+  <div class="field">
+    <%= f.radio_button :gender, '1' %>
+    <%= f.label :gender, "男性" %>
+
+    <%= f.radio_button :gender, '0' %> 
+    <%= f.label :gender, "女性" %>
+  </div>
+
+  <div class="field">
+  <%= f.label :誕生日 %><br>
+  <%= f.date_select(
+          :Birth_date,
+          start_year: 1930,
+          end_year:   (Time.now.year - 18),
+          default:    Date.new(1989, 1, 1)) %>
+  </div>
+
+<div class="field">
+<%= f.select :part_1, [
+  ["パート1", "none"], 
+  ["Vo:ボーカル", "Vo:ボーカル"],
+  ["Gt:ギター", "Gt:ギター"],
+  ["Ba:ベース", "Ba:ベース"],
+  ["Dr:ドラム", "Dr:ドラム"],
+  ["Key:キーボード", "Key:キーボード"],
+  ["DJ:DJ", "DJ:DJ"],
+  ["W.W:木管楽器", "W.W:木管楽器"],
+  ["B.W:金管楽器", "B.W:金管楽器"],
+  ["Str:弦楽器", "Str:弦楽器"],
+  ["Perc:打楽器", "Perc:打楽器"],
+  ["Others:その他", "Others:その他"]] %>
+  <%= f.text_field :start_at_part_1 , :placeholder => "例）12"  %>年
+<br>
+<%= f.select :part_2, [
+  ["パート2", "none"], 
+  ["Vo:ボーカル", "Vo:ボーカル"],
+  ["Gt:ギター", "Gt:ギター"],
+  ["Ba:ベース", "Ba:ベース"],
+  ["Dr:ドラム", "Dr:ドラム"],
+  ["Key:キーボード", "Key:キーボード"],
+  ["DJ:DJ", "DJ:DJ"],
+  ["W.W:木管楽器", "W.W:木管楽器"],
+  ["B.W:金管楽器", "B.W:金管楽器"],
+  ["Str:弦楽器", "Str:弦楽器"],
+  ["Perc:打楽器", "Perc:打楽器"],
+  ["Others:その他", "Others:その他"]] %>
+   <%= f.text_field :start_at_part_2 , :placeholder => "例）12"  %>年
+  </div>
+
+  <div class="field">
+    <%= f.label :ユーザID %><br />
+    <%= f.text_field :user_id%>
+  </div>
+
+  <div class="field">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :パスワード（確認） %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+ <%= radio_button 'user', 'terms', 'rails_base', {}%> 利用規約とプライバシーポリシーに同意します。
+
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit  "新規登録" %>
   </div>
 <% end %>
 
