view file script

--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+
+<head>
+  <title>Pusher Test</title>
+  <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
+  <script>
+    // Enable pusher logging - don't include this in production
+    Pusher.log = function(message) {
+      if (window.console && window.console.log) {
+        window.console.log(message);
+      }
+    };
+
+    var pusher = new Pusher('7cadebb65622e49e0891', {
+      encrypted: true
+    });
+    var channel = pusher.subscribe('test_channel');
+    channel.bind('my_event', function(data) {
+      alert(data.message);
+    });
+  </script>
+</head>
+
+
 <%= form_tag('/post', :remote => true) do %>
 <%= text_field_tag 'message' %>
 <%= submit_tag 'send' %>
