--- a/app/views/chat/index.html.erb
+++ b/app/views/chat/index.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
 <head>
   <title>Pusher Test</title>
   <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
@@ -18,9 +18,19 @@
     channel.bind('my_event', function(data) {
       alert(data.message);
     });
+    
+    var pusher = new Pusher('<%= 7cadebb65622e49e0891 %>');
+    var channel = pusher.subscribe('general_channel');
+    channel.bind('chat_event', function(data) {
+      var messagelog = document.getElementById('messagelog');
+      var messagediv = document.createElement('div');
+      messagediv.innerHTML = data.message;
+      messagelog.appendChild(messagediv);
+    });
   </script>
-</head>
 
+</head>
+<body>
 
 <%= form_tag('/post', :remote => true) do %>
 <%= text_field_tag 'message' %>
@@ -28,3 +38,5 @@
 <% end %>
 
 <div id='messagelog'></div>
+  </body>
+  </html>
