ログイン時のメール認証

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
@@ -37,4 +37,4 @@
   <% end %>
 </div>
 
-<%= subscribe_to conversation_path(@conversation) %>
+<%= subscribe_to conversation_path(@conversation) %> -->
