検索機能実装（名前のみ）

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,10 +14,10 @@
   </div>
 
   <div class="field">
-    <%= f.radio_button :gender, '1' %>
+    <%= f.radio_button :gender, '男性' %>
     <%= f.label :gender, "男性" %>
 
-    <%= f.radio_button :gender, '0' %> 
+    <%= f.radio_button :gender, '女性' %> 
     <%= f.label :gender, "女性" %>
   </div>
 
