--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,25 @@
 <h1>Listing Users</h1>
 
+ <%= search_form_for(@q,url: "/", method: :get) do |f| %>
+  <%= f.label :名前 %>
+  <%= f.text_field :name_eq, class: "form-control", placeholder: "完全一致" %>
+
+    <%= f.submit '検索', class: "btn btn-primary" %>
+    <%= link_to 'クリア', url_for, class: "btn btn-default" %>
+  <% end %>
 
 <table>
   <thead>
     <tr>
-      <th>Name</th>
+      <th>名前</th>
       <th>Email</th>
+      <th>user_id</th>
+      <th>誕生日</th>
+      <th>gender</th>
+      <th>パート</th>
+      <th>歴</th>
+      <th>パート</th>
+      <th>歴</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,6 +29,13 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
+        <td><%= user.user_id %></td>
+        <td><%= user.Birth_date %></td>
+        <td><%= user.gender %></td>
+        <td><%= user.part_1 %></td>
+        <td><%= user.start_at_part_1 %></td>
+        <td><%= user.part_2 %></td>
+        <td><%= user.start_at_part_2 %></td>
         
       </tr>
     <% end %>
