--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -1,40 +1,19 @@
-<!-- <p id="notice"><%= notice %></p>
+ <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
-  <%= @user.name %>
+<% if user_signed_in? %>
+<%= current_user.name %>
+<% else %>
+
+<% end %>
 </p>
 
 <p>
   <strong>Email:</strong>
-  <%= @user.email %>
+<%= current_user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_registration_path %> |
+<%= link_to 'Back', root_path %>
 
-<div class="chatboxhead">
-  <div class="chatboxtitle">
-    <i class="fa fa-comments"></i>
-
-    <h1><%= @reciever.name %> </h1>
-  </div>
-  <div class="chatboxoptions">
-    <%= link_to "<i class='fa  fa-minus'></i> ".html_safe, "#", class: "toggleChatBox", "data-cid" => @conversation.id %>
-    &nbsp;&nbsp;
-    <%= link_to "<i class='fa  fa-times'></i> ".html_safe, "#", class: "closeChat", "data-cid" => @conversation.id %>
-  </div>
-  <br clear="all"/>
-</div>
-<div class="chatboxcontent">
-  <% if @messages.any? %>
-      <%= render @messages %>
-  <% end %>
-</div>
-<div class="chatboxinput">
-  <%= form_for([@conversation, @message], :remote => true, :html => {id: "conversation_form_#{@conversation.id}"}) do |f| %>
-      <%= f.text_area :body, class: "chatboxtextarea", "data-cid" => @conversation.id %>
-  <% end %>
-</div>
-
-<%= subscribe_to conversation_path(@conversation) %> -->
