--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,6 @@
-<p>Welcome <%= @email %>!</p>
+<p><%= @email %>さん</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>この度はバンドクムにご登録いただき誠にありがとうございます。</p>
+<p>下記のリンクをクリックして認証を完了してください。</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to '認証する', confirmation_url(@resource, confirmation_token: @token) %></p>
