--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Bandkum3</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-   <%= stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <meta content='<%= user_signed_in? ? current_user.id : "" %>' name='user-id'/>
-</head>
-<body>
+<html lang="ja">
+  <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+      <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+      <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+      <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
+    <title>Bandkum3</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <meta content='<%= user_signed_in? ? current_user.id : "" %>' name='user-id'/>
+  </head>
+  <body>
 <%= link_to "トップ", root_path %>
 <p class="navbar-text pull-right">
+
+
+
 <% if user_signed_in? %>
   ようこそ <strong><%= current_user.name %></strong>さん
   <%= link_to 'プロフィール編集', edit_user_registration_path, :class => 'navbar-link' %> |
@@ -28,8 +40,8 @@
 <!-- chatty -->
 
 <div class="container">
+
 <%= yield %>
   </div>
 </body>
 </html>
-
