--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,7 @@
- <%= search_form_for(@q,url: "/", method: :get) do |f| %>
-  <%= f.search_field :name_or_part_1_or_part_2_cont, class: "form-control", placeholder: "検索" %>
-   <%= f.submit '検索', class: "btn btn-primary" %>
-  <% end %>
 
+<%= sort_link(@q, :updated_at, 'おすすめ', default_order: :desc) %>
+<%= sort_link(@q, :updated_at, '新着', default_order: :desc) %>
+<%= sort_link(@q, :updated_at, '人気', default_order: :desc) %>
 <br>
   <%= search_form_for(@q,url: "/",format: :pdf, method: :get) do |f| %>
   <%= link_to '初期値に戻す', url_for, class: "btn btn-default" %>
