トップ一時完了

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -198,8 +198,8 @@ a:focus {
 /* top.html */
 .nav_header div{
     
-    float: left;
-    display: inline-block;
+    /*float: left;
+    display: inline-block;*/
 }
 
 .nav_header img{
@@ -211,19 +211,33 @@ a:focus {
     /*width: 32px;*/
 }
 
+.navbar-link strong{
+    color: #ffffff;
+}
+
+.navbar-link p{
+    text-decoration: none !important;
+    padding-bottom: 1px;
+}
+
 .header_menu{
     padding: 0% 5%;
 }
 
+.search{
+    margin: 0.5% 0 0 0;
+}
+
 .current_account img{
-    width: 32px;
+    /*width: 32px;*/
 }
 
 .lower_header .header{
     background: gray;
-    width: 100%;
+    width: 102%;
     height:600px;
 }
+
 
 #user_search select{
     width:200px;
@@ -276,6 +290,24 @@ dd {
     left: 12%;
 }
 
+.form-control{
+    
+}
+
+.btn {
+    margin:auto;
+}
+
+.search_form{
+    padding: 0 6%;
+    margin:3% 0;
+}
+
+.member_lists{
+    background-color: rgba(128, 128, 128, 0.37);
+    width: 72.5%;
+    height: 40em;
+}
 /* /top.html */
 
 
@@ -345,3 +377,66 @@ dd {
 }
 
 /*/sessions/new.html.erb*/
+
+/*_header.html*/
+/*ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    color: #fff;
+}
+ul#menu li{
+    float: right;
+    position: relative;
+    margin: 0;
+    padding: 0px 0 15px 5px;
+    width: 21px;
+    height: 150px;
+    background-color: #555555;
+    display: block;
+}
+ul.child{
+        display: none;
+        position: absolute;
+        margin-left: -5px;
+        padding: 0;
+        width:100px;
+}
+ul.child li a{
+    padding: 5px 10px;
+    margin-left: -5px;
+    margin-right: -5px;
+    margin-bottom: -5px;
+    display: block;
+    color: #fff;
+}
+li a:hover{
+    background: #ff0000;
+    width:150px;
+}*/
+
+#menu div {
+  position: relative;
+  float: right;
+  padding: 0 20%;
+  margin: -12% 0;
+}
+
+span {
+  cursor: pointer;
+}
+
+.child{
+    z-index: 100;
+}
+
+.child ul {
+  display: none;
+  position: absolute;
+  width:100px;
+}
+
+.child li a{
+    background-color: #ffffff;
+}
+/* /_header.html*/
