--- a/app/assets/stylesheets/my-bootstrap.css
+++ b/app/assets/stylesheets/my-bootstrap.css
@@ -2,7 +2,7 @@
     max-width: 100%;
     padding-right: 1px;
     padding-left: 1px;
-     /*width: 100% !important;*/
+     width: 100% !important;
 
 
 }
